objects/Veda_Fraud_Veri_Check_Suit_Summary__c.object
<CustomObject>
    <fields>
        <fullName>Birth_Certificate_Verification_Indicator__c</fullName>
        <label>Birth Certificate Verification Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dfat_Verification_Indicator__c</fullName>
        <label>Dfat Verification Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fraud_Check_Indicator__c</fullName>
        <label>Fraud Check Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ftra_Bureau_Check_Indicator__c</fullName>
        <label>Ftra Bureau Check Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ofat_Verification_Indicator__c</fullName>
        <label>Ofat Verification Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Veda_Fraud__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Veda Fraud</label>
        <referenceTo>Veda_Fraud__c</referenceTo>
        <relationshipName>Veri_Check_Suit_Summarys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Veri_Check_Indicator__c</fullName>
        <label>Veri Check Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Veda Fraud Veri Check Suit Summary</label>
    <nameField>
        <label>Veri Check Suit Summary Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Veda Fraud Veri Check Suit Summary</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>